tests/ui/parser/similar-tokens.stderr
error: expected one of `,`, `::`, `as`, or `}`, found `.`
  --> $DIR/similar-tokens.rs:9:10
   |
LL | use x::{A. B};
   |          ^
   |          |
   |          expected one of `,`, `::`, `as`, or `}`
   |          help: missing `,`

error: aborting due to 1 previous error

